<resources>

    <!-- strings for the empty view of the main activity -->
    <string name="empty_view_main">There are zero products in your inventory.</string>
    <string name="empty_view_instruct">Get started by adding a product!
                          \nPress the camera button at the bottom of the screen.</string>

    <!-- strings for edit views in the detail activity -->
    <string name="detail_view_name">Name</string>
    <string name="detail_view_quantity">Quantity</string>
    <string name="detail_view_price">Price</string>
    <string name="app_name">InventoryAppUdacity</string>

    <!-- strings for the buttons in the detail activity -->
    <string name="detail_track_sale">Track Sale</string>
    <string name="detail_receive_shipment">Receive Shipment</string>
    <string name="detail_order_from_supplier">Order from Supplier</string>
    <string name="detail_delete_record">Delete</string>
    <string name="detail_save_record">Save</string>
    <string name="detail_take_picture">Take Picture</string>
    <string name="detail_supplier_email">Supplier Email</string>

    <!-- titles fo the activity -->
    <string name="detail_title_add_new_product">Add new Product</string>
    <string name="detail_title_edit_a_product">Edit Product</string>

    <!-- toast messages -->
    <string name="detail_insert_product_successful">Product Successfully inserted</string>
    <string name="detail_insert_product_failed">Error inserting Product</string>
    <string name="detail_update_product_successful">Product updated</string>

    <string name="detail_update_product_failed">Error with updating product</string>

    <string name="button_catalog_sale">Sale</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="detail_delete_product_failed">Error with deleting product.</string>
    <string name="detail_delete_product_successful">Product deleted</string>

    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="supplier_email">Supplier Email</string>

    <string name="id_name">Name</string>
    <string name="id_quantity">Quantity</string>
    <string name="id_price">Price</string>
    <string name="id_supplier_email">Supplier Email</string>

    <string name="catalog_name_title">Name: ""</string>
    <string name="catalog_quantity_title">Quantity: ""</string>
    <string name="catalog_price_title">Price: $</string>

</resources>


